# BestGameTheSol

./: .gitignore  LICENSE  README
DLLTESTE/: DLLTESTE.vcxproj
DLLTeste/: Functions.cpp
RUSTTeste/: Cargo.toml  Dll.cs  build.rs  cbindgen.toml  rust.h
RUSTTeste/src/: lib.rs
Sol Project/: .editorconfig
Sol Project/Assets/Materials/: Blue.mat  Cyan.mat  Edit.mat
Sol Project/Assets/Physics Materials/: quicador.physicsMaterial2D
Sol Project/Assets/Prefab/: Main Camera.prefab  MarioDab.prefab  Rectangle.prefab  Slow area.prefab  Square (1).prefab  Square.prefab  Square3.prefab  SquareNeg.prefab  SquareSide.prefab  casimito.prefab
Sol Project/Assets/Scenes/: SampleScene.unity
Sol Project/Assets/Scripts/: Boca.cs  BuffJump.cs  CameraScript.cs  ChangeGravityType.cs  DLL.cs  DebugKeys.cs  DebugKeys.inputactions  ForceGameQuit.cs  HitArea.cs  JumpFactor.cs  Move.cs  MoveCamera.cs  MoveEnemy.cs  MoveMario.cs  MovePlayer.cs  NiceMethods.cs  Orbit.cs  Player.cs  Player.inputactions  RigInformation.cs  Rotate.cs  SO.cs  SaveGame.cs  SelfDestruct.cs  SlowArea.cs  SpeedArea.cs  SpeedEffect.cs  SpeedObject.cs  StartRig.cs  Stats.cs
Sol Project/Assets/Scripts/CGT/: ChangeGravityType.cs  ChangeGravityType1.cs  ChangeGravityType2.cs  ChangeGravityType3.cs  ChangeGravityTypeDynamic.cs  GravityContext.cs  GravityContext2.cs  GravityContextDynamic.cs  Invert.cs
Sol Project/Assets/Scripts/GC/: CustomGravity.cs  (+4 more)
Sol Project/Assets/UI/: PauseUI.prefab
Sol Project/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Sol Project/UserSettings/Layouts/: default-2021.dwlt
(+3 files in other folders)
